--- a/index.html
+++ b/index.html
@@ -5222,11 +5222,30 @@
       .ot-floating-button__front {
         background-image: url("https://cdn.cookielaw.org/logos/static/ot_persistent_cookie.png");
       }
+
+      /* FIX: Corrigir posicionamento e exibição de títulos nos cards */
+      .ClashRoyaleStoreSpecialHeading_SpecialOfferContainer__JTu7c {
+        position: absolute !important;
+        top: 8px !important;
+        left: 0 !important;
+        right: 0 !important;
+        width: 100% !important;
+        text-align: center !important;
+        z-index: 10 !important;
+        padding: 4px 8px !important;
+        box-sizing: border-box !important;
+      }
       
-      /* FIX: Corrigir truncamento de títulos nos cards */
+      .ClashRoyaleStoreSpecialHeading_RowContainer___8tO0 {
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+        width: 100% !important;
+      }
+      
       .ClashRoyaleStoreSpecialHeading_RowContainer___8tO0 h3,
       h3.storeTypography_textBase__B5TeC,
-      h3[class*='storeTypography'] {
+      h3[class*="storeTypography"] {
         overflow: visible !important;
         white-space: normal !important;
         text-overflow: clip !important;
@@ -5234,6 +5253,8 @@
         line-height: 1.2 !important;
         word-wrap: break-word !important;
         display: block !important;
+        text-align: center !important;
+        font-size: 14px !important;
       }
     </style>
     <script
