--- a/index.html
+++ b/index.html
@@ -5223,38 +5223,36 @@
         background-image: url("https://cdn.cookielaw.org/logos/static/ot_persistent_cookie.png");
       }
 
-      /* FIX: Corrigir posicionamento e exibição de títulos nos cards */
+      /* FIX: Corrigir exibição de títulos nos cards de heróis */
       .ClashRoyaleStoreSpecialHeading_SpecialOfferContainer__JTu7c {
-        position: absolute !important;
-        top: 8px !important;
-        left: 0 !important;
-        right: 0 !important;
+        position: relative !important;
         width: 100% !important;
         text-align: center !important;
         z-index: 10 !important;
-        padding: 4px 8px !important;
+        padding: 8px !important;
         box-sizing: border-box !important;
+        background: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, transparent 100%) !important;
       }
-      
+
       .ClashRoyaleStoreSpecialHeading_RowContainer___8tO0 {
         display: flex !important;
         justify-content: center !important;
         align-items: center !important;
         width: 100% !important;
       }
-      
-      .ClashRoyaleStoreSpecialHeading_RowContainer___8tO0 h3,
-      h3.storeTypography_textBase__B5TeC,
-      h3[class*="storeTypography"] {
+
+      .ClashRoyaleStoreSpecialHeading_RowContainer___8tO0 h3 {
         overflow: visible !important;
-        white-space: normal !important;
+        white-space: nowrap !important;
         text-overflow: clip !important;
-        max-width: 100% !important;
-        line-height: 1.2 !important;
-        word-wrap: break-word !important;
-        display: block !important;
+        max-width: none !important;
+        width: auto !important;
+        line-height: 1.3 !important;
+        display: inline-block !important;
         text-align: center !important;
-        font-size: 14px !important;
+        font-size: 16px !important;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.8) !important;
+        color: #fff !important;
       }
     </style>
     <script
