Fix: Corrigir titulo Clash Royale e CSS de cards de herois no arquivo CSS original

--- a/index.html
+++ b/index.html
@@ -5231,7 +5231,11 @@
         z-index: 10 !important;
         padding: 8px !important;
         box-sizing: border-box !important;
-        background: linear-gradient(180deg, rgba(0,0,0,0.7) 0%, transparent 100%) !important;
+        background: linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 0.7) 0%,
+          transparent 100%
+        ) !important;
       }
 
       .ClashRoyaleStoreSpecialHeading_RowContainer___8tO0 {
@@ -5251,7 +5255,7 @@
         display: inline-block !important;
         text-align: center !important;
         font-size: 16px !important;
-        text-shadow: 2px 2px 4px rgba(0,0,0,0.8) !important;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8) !important;
         color: #fff !important;
       }
     </style>
@@ -5540,7 +5544,7 @@
                       data-state="minimized"
                     >
                       <h1 class="ClashRoyale_Heading__kcLPm">
-                        Boas-vindas à loja deash Royale!
+                        Boas-vindas à loja de Clash Royale!
                       </h1>
                     </div>
                   </div>
