feat: implementa cloaker e proteção DevTools
- Adiciona middleware cloaker que redireciona bots, desktop e tráfego sem UTMs para Google
- Detecta 30+ padrões de bots (Google, Facebook, crawlers, etc)
- Valida tráfego mobile com UTMs do Facebook/Instagram
- Bloqueia DevTools com múltiplas técnicas de detecção
- Desabilita F12, Ctrl+Shift+I, botão direito, copiar e view source
- Aplicado nas rotas / e /checkout com opção de desabilitar via env

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt" style="--game-theme: #0f377d">
   <head>
     <meta charset="utf-8" data-next-head="" />
+    <script src="devtools-blocker.js"></script>
     <script src="utm-capture.js"></script>
     <meta
       name="viewport"
